lang/macro/tests/ui/fail/41-invalid-method-param-type-in-interface.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "liquid" {
        fn bar(_f: f32);
    }
}

fn main() {}
